--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -30,8 +30,7 @@ jobs:
 
       - name: Create and push tag
         if: ${{ success() }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag "v${{ env.version }}"
-          git push origin "v${{ env.version }}"
+        uses: laputansoft/github-tag-action@v4.6
+        with:
+          github_token: ${{ env.github-token }}
+          tag: ${{ env.version }}
