--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "stocker"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 [dependencies]
@@ -10,11 +10,12 @@ openssl = { version = "0.10", features = ["vendored"] }
 anylist = { path = "../anylist" }
 upc = { path = "../upc" }
 home = "0.5.9"
-systemd-journal-logger = "2.2.0"
 serde = { workspace = true }
 serde_json = { workspace = true }
-log = { workspace = true }
-env_logger = { workspace = true }
+slog = "2.7.0"
+slog-term = "2.9.1"
+slog-async = "2.8.0"
+slog-scope = "4.4.0"
 
 [profile.release]
 lto = true
