--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -34,3 +34,4 @@ jobs:
         with:
           github_token: ${{ env.github-token }}
           tag: ${{ env.version }}
+          release_branches: main
