--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -33,8 +33,7 @@ jobs:
 
       - name: Create and push tag
         if: ${{ success() }}
-        uses: laputansoft/github-tag-action@v4.6
+        uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ env.version }}
-          release_branches: main
+          custom_tag: ${{ env.version }}
