Only fire if new tag is detected

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,7 @@
 name: Rust
 
 on:
-  workflow_run:
-    workflows: ["Tag Creation"]  # Name of the first workflow
-    types:
-      - completed  # Runs when the Release workflow completes successfully
+  workflow_call:
 
 env:
   CARGO_TERM_COLOR: always
