--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -37,3 +37,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ env.version }}
+
+      - name: Call Rust Workflow
+        if: ${{ success() }}
+        uses: ./.github/workflows/rust.yml
