--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -38,6 +38,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ env.version }}
 
-      - name: Call Rust Workflow
-        if: ${{ success() }}
-        uses: ./.github/workflows/rust.yml
+  generate-release-artifacts:
+    needs: tag-release
+    if: ${{ success() }}  # Ensures this only runs if the tag creation was successful
+    uses: ./.github/workflows/rust.yml  # Call the rust workflow
