--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -40,4 +40,5 @@ jobs:
 
   generate-release-artifacts:
     needs: tag-release
+    if: ${{ success() }}  # Ensures this only runs if the tag creation was successful
     uses: ./.github/workflows/rust.yml  # Call the rust workflow
