--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Check for existing tag
         id: check-tag
         run: |
-          if git rev-parse "v${{ env.version }}" >/dev/null 2>&1; then
+          if git tag | grep -q "v${{ env.version }}"; then
             echo "Tag v${{ env.version }} already exists."
             exit 1
           fi
@@ -36,9 +36,9 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ env.version }}
+          custom_tag: v${{ env.version }}
 
   generate-release-artifacts:
     needs: tag-release
-    if: ${{ success() }}  # Ensures this only runs if the tag creation was successful
+    if: ${{ needs.tag-release.result == 'success' }}  # Ensures this only runs if the tag creation was successful
     uses: ./.github/workflows/rust.yml  # Call the rust workflow
