--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,6 +2,11 @@ name: Rust
 
 on:
   workflow_call:
+    inputs:
+      tag_name:
+        description: 'The tag name for the release'
+        required: true
+        type: string
 
 env:
   CARGO_TERM_COLOR: always
@@ -25,5 +30,6 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: target/arm-unknown-linux-gnueabihf/release/stocker
+        tag_name: ${{ inputs.tag_name }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
