--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -38,7 +38,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: v${{ env.VERSION }}
+          custom_tag: ${{ env.VERSION }}
 
   build-release-artifacts:
     needs: check-and-create-tag
