--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,5 +39,6 @@ jobs:
         with:
           files: target/arm-unknown-linux-gnueabihf/release/stocker
           tag_name: ${{ inputs.tag_name }}
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
