--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ members = ["app", "anylist", "upc"]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.132" }
 isahc = "1.7.2"
+
+[profile.release]
+lto = true
+strip = true
+panic = "abort"
+opt-level = "z"  # Optimize for size.
+codegen-units = 1
